--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ant-design-pro",
-  "homepage": "https://Gulayozov.github.io/Front-Studio",
+  "homepage": "https://Gulayozov.github.io/Front-Studio/",
   "version": "6.0.0",
   "private": true,
   "description": "An out-of-box UI solution for enterprise applications",
